--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ jobs:
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: 11
+          distribution: adopt
+          cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Test with Maven
