--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ jobs:
         env:
           POSTGRES_USER: user
           POSTGRES_PASSWORD: password
+          POSTGRES_DB: project_planner
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
